# Locali

./: IMPLEMENTATION_REVIEW.md  Plan of action - v2.txt  pyproject.toml
backend/: .env  main.py  pyproject.toml  requirements.txt  run_server.py
backend/app/: main.py
backend/app/api/routes/: conversations.py  documents.py  models.py  search.py  system.py  tasks.py
backend/app/core/: config.py  logging.py
backend/app/services/: background_tasks.py  conversation_manager.py  document_processor.py  model_manager.py  security.py  system.py  vector_search.py
backend/app/utils/: helpers.py  token_counter.py
frontend/: .env  .eslintrc.cjs  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ChatInput.tsx  CodeBlock.tsx  Message.tsx  MessageList.tsx  TypingIndicator.tsx
frontend/src/components/conversations/: ConversationItem.tsx  ConversationList.tsx
frontend/src/components/documents/: DocumentItem.tsx  DocumentList.tsx  DocumentUpload.tsx
frontend/src/components/editor/: MonacoCodeViewer.tsx
frontend/src/hooks/: useClipboard.ts  useDebounce.ts  useIntersectionObserver.ts  useKeyboardShortcuts.ts  useLocalStorage.ts  useOnlineStatus.ts  usePerformanceMonitor.ts
frontend/src/lib/: api.ts  constants.ts  queries.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  DocumentsPage.tsx  SettingsPage.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
(+17 files in other folders)
