[project]
name = "locali"
version = "0.1.0"
description = ""
authors = [
    {name = "AlbinJo",email = "albinjosephaj5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "llama-cpp-python (>=0.3.12,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
