[project]
name = "locali"
version = "0.1.0"
description = "Local AI coding assistant backend"
authors = [
    {name = "AlbinJo",email = "albinjosephaj5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
